# line_following

./: .gitignore  README.md
src/camera/: CMakeLists.txt  package.xml
src/camera/launch/: camera_test.launch.py
src/corner_control/: CMakeLists.txt  package.xml
src/corner_control/launch/: corner_control.launch.py
src/corner_control/src/: corner_controller_node.cpp  corner_detector_node.cpp
src/laser/: CMakeLists.txt  package.xml
src/laser/src/: laser_node.cpp
src/line_following/: CMakeLists.txt  package.xml
src/line_following/launch/: camera_test.launch.py  line_following.launch.py  line_following_sim.launch.py
src/line_following/src/: camera_node.cpp  line_controller_node.cpp  line_detector_node.cpp  point_gui_node.cpp  serial_bridge_node.cpp
src/serial_bridge/: CMakeLists.txt  package.xml
src/serial_bridge/src/: serial_bridge_node.cpp
src/simulation/: CMakeLists.txt  package.xml
src/simulation/launch/: corner_sim.launch.py
src/simulation/src/: point_gui_node.cpp
src/system_monitor/: CMakeLists.txt  package.xml
src/system_monitor/src/: system_monitor_node.cpp
src/vertical_line_control/: CMakeLists.txt  package.xml
src/vertical_line_control/launch/: vertical_line_control.launch.py
src/vertical_line_control/src/: vertical_line_detector_node.cpp
